Support true color in Alacritty

--- a/home/config/tmux/tmux.conf
+++ b/home/config/tmux/tmux.conf
@@ -1,9 +1,7 @@
 set -g prefix C-j
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-bind R source-file ~/.config/tmux/tmux.conf \; display-message "Reloaded..."
+set -g default-terminal "$TERM"
+set -ag terminal-overrides ",$TERM:Tc"
 
 # Options
 set -g base-index 1            # start indexing windows at 1 instead of 0
@@ -19,6 +17,8 @@ setw -g mode-keys vi           # move with vim navigation
 # ====================
 # Rebinds
 # ====================
+bind R source-file ~/.config/tmux/tmux.conf \; display-message "Reloaded..."
+
 unbind h; unbind j; unbind k; unbind l
 unbind H; unbind J; unbind K; unbind L
 
@@ -52,10 +52,10 @@ color_black="#000000"
 set -g status on
 set -g status-interval 1
 set -g status-justify right
-set -g status-style "bg=#000000,fg=#ffffff"
+set -g status-style "bg=#0D1017,fg=#C5C8C6"
 
 # Left side of status bar
-set -g status-left "#[fg=default,bold] #{?client_prefix,🧠,🔖} #S"
+set -g status-left "#[fg=default,bold] #{?client_prefix,🧠,👾} #S"
 
 # Right side of status bar
 set -g status-right " "
@@ -63,11 +63,11 @@ set -g status-right " "
 # Window list
 set -g window-status-separator ""
 set -g window-status-format "#[fg=$color_white]  #I:#W "
-set -g window-status-current-format " #[bold]📌#I:#W "
+set -g window-status-current-format " #[bold]📌 #I:#W "
 
 # Pane color
 setw -g pane-active-border-style "fg=$color_purple"
 
-# Initialize TMUX plugin manager
-run '~/.config/tmux/plugins/tpm/tpm'
+# Initialize plugins
+run-shell ~/.config/tmux/plugins/tmux-yank/yank.tmux
 
